# EnAVP2

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
data/AMP/: amps.fasta  not_amps.fasta
data/AVP/: avps.fasta  not_avps.fasta
src/enavp/: __init__.py  features.py  iFeature.py  model.py  predict.py  predict_and_classify.py  preprocess.py  train.py  util.py
src/enavp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/enavp/class_model/: std_scaler.pkl
src/enavp/pre_trained_models/AMP/full_ds/: lstm_module.pt  rf_module.jlib
src/enavp/pre_trained_models/AMP/train_test/: lstm_module.pt  rf_module.jlib
src/enavp/pre_trained_models/AVP/full_ds/: rf_module.jlib
src/enavp/pre_trained_models/AVP/train_test/: rf_module.jlib
