[metadata]
name = enavp
version = attr:enavp.__version__
author = Caio Fontes, Fernanda Midori Abukawa
author_email = caiofcastro@usp.br, fernanda.abukawa@gmail.com
license = MIT
license_files = LICENSE

[options]
package_dir=
    =src
packages = enavp
install_requires=
    torch == 1.8.1
    scikit-learn == 1.0.2
    #scikit-learn == 0.24.1
    joblib == 1.0.1
    biopython >= 1.79
    numpy >= 1.20.3

[options.entry_points]
console_scripts =
          enavp = enavp.predict:run
          enavp-train = enavp.train:run
          enavp-classify = enavp.predict_and_classify:run